--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  margin-top: 1.5rem;
 }
 
 .location-card-tex-box {
@@ -168,6 +169,12 @@ img {
   .nav-list {
     flex-direction: column;
     align-items: center;
+  }
+
+  .location-card {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 }
 
